--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -48,12 +48,7 @@ flutter:
     - assets/load.gif
     - assets/tv_loading.gif
     - assets/logo.png
-    - assets/plate1.png
-    - assets/plate2.png
-    - assets/plate3.png
-    - assets/plate4.png
-    - assets/plate5.png
-    - assets/plate6.png
+    - assets/sun.jpg
 
   # An image asset can refer to one or more resolution-specific "variants", see
   # https://flutter.dev/assets-and-images/#resolution-aware.
