--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -17,10 +17,11 @@ environment:
   sdk: ">=2.1.0 <3.0.0"
 
 dependencies:
+  cloud_firestore: ^0.13.0+1
   curved_navigation_bar: ^0.3.2
+  flutter_swiper: ^1.1.6
   flutter:
     sdk: flutter
-
 
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
@@ -49,6 +50,8 @@ flutter:
     - assets/tv_loading.gif
     - assets/logo.png
     - assets/sun.jpg
+    - assets/sad_Tv.png
+    - assets/shop.jpg
 
   # An image asset can refer to one or more resolution-specific "variants", see
   # https://flutter.dev/assets-and-images/#resolution-aware.
