--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -49,7 +49,7 @@ flutter:
     - assets/load.gif
     - assets/tv_loading.gif
     - assets/logo.png
-    - assets/sun.jpg
+    - assets/tv.jpg
     - assets/sad_Tv.png
     - assets/shop.jpg
 
