--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -18,6 +18,7 @@ environment:
 
 dependencies:
   cloud_firestore: ^0.13.0+1
+  folding_cell: ^0.1.2
   intl: ^0.16.1
   smooth_star_rating: ^1.0.4+2
   scheduled_notifications: ^1.0.0
