--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -20,6 +20,7 @@ dependencies:
   cloud_firestore: ^0.13.0+1
   folding_cell: ^0.1.2
   intl: ^0.16.1
+  fluttertoast: ^4.0.0
   smooth_star_rating: ^1.0.4+2
   flutter_slidable: ^0.4.7
   flutter_local_notifications: ^1.4.1
